fix: page structure

--- a/features/apps.mdx
+++ b/features/apps.mdx
@@ -10,17 +10,17 @@ An app is an external api or system that has been onboarded to Switchboard. Vers
 An App is currently one of the following types:
 
 <CardGroup cols={1}>
-  <Card title="REST API" href="/features/app-types/rest-api">
+  <Card title="REST API" href="/features/apps/rest-api">
     When onboarding a REST API, you upload an OpenAPI Specification (OAS) file.
     This file is used to generate the app's operations and available security
     schemes, as well as the available servers.
   </Card>
-  <Card title="GraphQL API" href="/features/app-types/graphql-api">
+  <Card title="GraphQL API" href="/features/apps/graphql-api">
     When onboarding a GraphQL API, you provide an introspection url. This url is
     used to validate the queries and mutations that you create within
     Switchboard for the app.
   </Card>
-  <Card title="SQL Database" href="/features/app-type/sql-app">
+  <Card title="SQL Database" href="/features/apps/sql-app">
     When onboarding a SQL Database, you create all of your SQL queries and also
     save those as operations.
   </Card>
