fix: version of oas

--- a/core-concepts.mdx
+++ b/core-concepts.mdx
@@ -11,7 +11,7 @@ Apps exist either as public (made available by Versori) or private (created by y
 
 When onboarding your own apps, we support multiple formats:
 
-- **OpenAPI 3._._** - An app that is defined by an OpenAPI 3._._ specification. This is the most common type of app.
+- **OpenAPI > v3** - An app that is defined by an OpenAPI 3._._ specification. This is the most common type of app.
 - **GraphQL** - An app with configured GraphQL endpoints. We can use introspection to validate your queries and mutations.
 - **SQL** - A connection to an SQL database that's available on the internet.
 
