fix: rejig structure

--- a/how-to-guides/onboarding-apps/rest-api.mdx
+++ b/how-to-guides/onboarding-apps/rest-api.mdx
@@ -1,5 +1,5 @@
 ---
-title: "REST API Apps"
+title: "Onboard a REST API"
 description: "REST apps are onboarded via uploading an OpenAPI specification file."
 ---
 
