fix: action docs

--- a/core-concepts.mdx
+++ b/core-concepts.mdx
@@ -61,7 +61,7 @@ We currently have the following actions available:
 - **Datamapper** - The datamapper is used to create a system reference between two entities of data - typically across different system. For example, you may want to map a customer from your CRM to a customer in your accounting system for future consideration/use within your flows.
 - **Splitter** - This action accepts an input of an array property. The splitter will iterate through each item and perform the rest of the flow journey for each item.
 - **Databuilder** - The databuilder is similar to the transformer, however provides a form interface with a user experience focused more on templating values, for example passing `{firstName} {lastName}` to create a full name.
-- **Batch** - The batch action allows you to group requests to be sent in a batch.
+- **Batch** - The batch action allows you to gather requests over a period of time and combine them into a single request.
 - **Delay** - Delay can be used to delay the execution of the next action in your workflow.
 - **Trigger** - The trigger action can be used to trigger requests that otherwise would never be triggered externally, or if you want to trigger on a defined schedule - such as every 24 hours.
 
