feat: databuilder and datamapper

--- a/features/actions/datamapper.mdx
+++ b/features/actions/datamapper.mdx
@@ -39,6 +39,10 @@ The `Key` is typically the source system's ID for the entity to be saved.
 
 `Value From` - this is the actual value from your board data that you wish to save a reference for. This could be a field from a previous action, or a value from a previous step in your workflow. Typically this will be an ID.
 
+<Frame caption="Key configuration form">
+  <img src="https://storage.googleapis.com/versori-assets/apps/user-docs/actions/datamapper/datamapper-key.png" />
+</Frame>
+
 #### Value
 
 The `Value` is only available to set in `Put` mode - seeing as we are creating a new reference in the Datamapper.
@@ -46,6 +50,10 @@ The `Value` is only available to set in `Put` mode - seeing as we are creating a
 The configuration for `Value` is the same as `Key` - this is the partner stored against the key and will typically be the ID of your entity in your target system.
 
 For example, `App Version` might be `erp-app.v1`, `Kind` might be `Item`, and `Value From` might be the ID of the `Item` in your ERP system.
+
+<Frame caption="Value configuration form">
+  <img src="https://storage.googleapis.com/versori-assets/apps/user-docs/actions/datamapper/datamapper-put-mode.png" />
+</Frame>
 
 ### Using Datamapper with Selectors
 
