--- a/how-to-guides/configure-datamapper.mdx
+++ b/how-to-guides/configure-datamapper.mdx
@@ -6,8 +6,8 @@ description: "The Datamapper supports two modes for storing mappings within Vers
 <Tabs>
   <Tab title="Video Guide">
     <iframe
-      width="560"
-      height="315"
+      width="100%"
+      height="407"
       src="https://www.youtube.com/embed/RNv1Rk8nGuM?si=l3YSu9sAakOvr_ym"
       title="YouTube video player"
       frameborder="0"
