--- a/how-to-guides/onboarding-apps/rest-api.mdx
+++ b/how-to-guides/onboarding-apps/rest-api.mdx
@@ -77,8 +77,8 @@ description: "REST apps are onboarded via uploading an OpenAPI specification fil
   </Tab>
   <Tab title="Video Guide">
     <iframe
-      width="560"
-      height="315"
+      width="100%"
+      height="407"
       src="https://www.youtube.com/embed/geFRpJtcf-4"
       title="YouTube video player"
       frameborder="0"
