--- a/features/actions/datamapper.mdx
+++ b/features/actions/datamapper.mdx
@@ -3,7 +3,9 @@ title: "Datamapper"
 description: "Datamapper provides storage within Switchboard for remembering cross-system references to different entities."
 ---
 
-The Datamapper can be thought of as a key-value store for cross-system references. This can be useful for long running workflows that need to handle both creating and updating across external systems.
+<Tabs>
+  <Tab title="Documentation">
+  The Datamapper can be thought of as a key-value store for cross-system references. This can be useful for long running workflows that need to handle both creating and updating across external systems.
 
 ### Use Cases
 
@@ -39,6 +41,8 @@ The `Key` is typically the source system's ID for the entity to be saved.
 
 `Value From` - this is the actual value from your board data that you wish to save a reference for. This could be a field from a previous action, or a value from a previous step in your workflow. Typically this will be an ID.
 
+{" "}
+
 <Frame caption="Key configuration form">
   <img src="https://storage.googleapis.com/versori-assets/apps/user-docs/actions/datamapper/datamapper-key.png" />
 </Frame>
@@ -50,6 +54,8 @@ The `Value` is only available to set in `Put` mode - seeing as we are creating a
 The configuration for `Value` is the same as `Key` - this is the partner stored against the key and will typically be the ID of your entity in your target system.
 
 For example, `App Version` might be `erp-app.v1`, `Kind` might be `Item`, and `Value From` might be the ID of the `Item` in your ERP system.
+
+{" "}
 
 <Frame caption="Value configuration form">
   <img src="https://storage.googleapis.com/versori-assets/apps/user-docs/actions/datamapper/datamapper-put-mode.png" />
@@ -75,3 +81,17 @@ The output of the data mapper will be on object in the form of:
 ```
 
 This allows you to use the saved values in further selectors also.
+
+  </Tab>
+   <Tab title="Video Guide">
+    <iframe
+      width="100%"
+      height="407"
+      src="https://www.youtube.com/embed/RNv1Rk8nGuM?si=l3YSu9sAakOvr_ym"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+  </Tab>
+</Tabs>
