--- a/how-to-guides/using-the-hubs-sdk.mdx
+++ b/how-to-guides/using-the-hubs-sdk.mdx
@@ -21,11 +21,12 @@ The SDK main Object provides an initialise function, accepting an object of opti
 function IntegrationComponent(props) {
   window.Versori.initHubs({
     userId: [USER_ID],
-    organisationId: [ORGANISATION_ID],
+    orgId: [ORGANISATION_ID],
+    apiKey: [PUBLIC_KEY],
     finaliseTo: [YOUR_ENDPOINT],
     onConnected: (connection, connectionInfo) => {},
-    onDisconnected: () => {},
-    onComplete: () => {},
+    onDisconnected: (connectionInfo) => {},
+    onCompleted: () => {},
     onError: (error) => {
       console.log(error.message, error.description);
     },
@@ -44,15 +45,19 @@ The user ID for the current logged in user.
 
 The organisation ID for your Versori platform subscription where your Hubs are located.
 
+#### apiKey (type: string, required: true)
+
+A read-only public API Key set in your organisation settings inside Versori platform.
+
 #### finaliseTo (type: string, optional: true)
 
 The finaliseTo option is intended to be used as a direct url the SDK can POST connection details to after a connection has been made.
 
 An example of this might be `https://clientUrl/api/receiveConnectionDetails`, where connection information will be sent directly.
 
-#### onComplete (type: Function, optional: true)
+#### onCompleted (type: Function, optional: true)
 
-The onComplete callback is called if a finaliseTo url is provided to a POST endpoint and the request was succesful. Here is where Frontend updates and any subseuqent processes can be handled.
+The onCompleted callback is called if a finaliseTo url is provided to a POST endpoint and the request was succesful. Here is where Frontend updates and any subseuqent processes can be handled.
 
 #### onConnected (type: Function, optional: true)
 
@@ -68,7 +73,7 @@ The onConnected callback is used to return the connection details to the fronten
 
 #### onDisconnected (type: Function, required: true)
 
-The onDisconnected callback can be used to trigger a request to your backend where a request to the Versori DELETE user endpoint can be made.
+The onDisconnected callback can be used to trigger a request to your backend where a request to the Versori DELETE user endpoint can be made. Returns the Hub ID and Board ID.
 
 #### onError (type: Function, required: true)
 
@@ -76,7 +81,7 @@ The onError callback is triggered at any point in the flow when an error would p
 
 #### onInitialised (type: Function, optional: true)
 
-The onInitialised callback is called when the SDK has completed its mounted setup and the SDK is ready. Useful to handle any Front end updates dependant on the SDK being available.
+The onInitialised callback is called when the SDK has completed its mounted setup and the SDK is ready. Here is where any Front end updates dependant on the SDK being available can be handled.
 
 ---
 
@@ -103,6 +108,69 @@ function IntegrationComponent(props) {
 
 ---
 
+## UI handling
+
+You will be responsible to update the UI after a user has been created or deleted. It is required a [data-connected] attribute be set/unset on the element. Internally, on initalisation, the SDK sets a [data-connected] attribute, for each already connected integration, on the element you have provided the required data-attributes on.
+
+<Warning>
+  **Warning:** It is imperative the [data-connected] is toggled on
+  create/delete. The SDK uses this attribute to trigger the correct flow from
+  the event.
+</Warning>
+
+Below is an example of how UI updates could be handled in React.
+
+```jsx title="frontend/src/components/integrationComponent.js"
+function IntegrationComponent(props) {
+    ...
+    useEffect(() => {
+        window.Versori.initHubs({
+            ...
+            onConnected: async (connection, connectionInfo) => {
+                try {
+                    // Make call to Backend and then createUser in Versori
+                    const response = await callToYourBackend()
+                    if (response.ok) {
+                        handleButtonUpdate(connectionInfo.boardId)
+                    }
+                } catch(e) {
+                    // Handle errors
+                    console.log(e)
+                }
+            },
+            onDisconnected: async (connectionInfo) => {
+                try {
+                    // Make call to Backend and then deleteUser in Versori
+                    const response = await callToYourBackend()
+                    if (response.ok) {
+                        handleButtonUpdate(connectionInfo.boardId)
+                    }
+                } catch(e) {
+                    // Handle errors
+                    console.log(e)
+                }
+            }
+        })
+    }, [])
+
+
+    const handleButtonUpdate = (boardId) => {
+        // toggle [data-connected] on the element matching boardId and handle any other desired UI updates
+    }
+
+    return (
+        ...
+        <button
+            data-vhubs
+            data-vhubid=[YOUR_HUB_ID]
+            data-vhubboardid=[YOUR_BOARD_ID]
+        >
+            Connect
+        </button>
+    );
+}
+```
+
 ## Valid Authentication types
 
 The Versori Hubs SDK supports OAuth2 (oidc), API Key, and Basic authentication (username, password).
@@ -111,9 +179,15 @@ The Versori Hubs SDK supports OAuth2 (oidc), API Key, and Basic authentication (
 
 ## Finalise Users Integration
 
-Once a user has connected to Versori, it is required that you authenticate the user in your Service and after send a POST request to the Versori create user endpoint.
+Once a user has connected to Versori, the onConnected callback will provide connection information that you can use when sending a request to your Backend before then sending a POST request to the Versori create user endpoint.
 
 `https://platform.versori.com/apis/switchboard/organisations/{orgId}/hubs/{hubId}/boards/{boardId}/users/{userId}`
+
+<Warning>
+  **Note:** Providing a `finaliseTo` endpoint will send connection details
+  directly to your Backend and the `onConnection` callback will not be
+  triggered.
+</Warning>
 
 ```js title="backend/src/services/user/createUser.js"
 function createUser(props) {
@@ -144,7 +218,7 @@ function createUser(props) {
 
 ## Disconnect User from Integration
 
-To disconnect a user, a POST request must be made to the Versori delete user endpoint
+To disconnect a user, the onDisconnected callback can be used to send a POST request to your Backend before sending a POST request to the Versori delete user endpoint
 
 `https://platform.versori.com/apis/switchboard/organisations/{orgId}/hubs/{hubId}/boards/{boardId}/users/{userId}`
 
@@ -156,5 +230,15 @@ function deleteUser(props) {
     const data = await response.json();
 
     console.log(data);
+}
+```
+
+## Destroy
+
+The SDK exposes a destroy function on the window Versori object that will delete the SDK and remove all event listeners.
+
+```js title="/src/components/integrationComponent.js"
+function IntegrationComponent(props) {
+  window.Versori.destroy();
 }
 ```
