--- a/how-to-guides/using-the-hubs-sdk.mdx
+++ b/how-to-guides/using-the-hubs-sdk.mdx
@@ -191,7 +191,7 @@ The Versori Hubs SDK supports OAuth2 (oidc), API Key, and Basic authentication (
 ## Create User for Integration
 
 Once a user has authenticated to the Integration, the onConnected callback will provide connection information that you can use when sending a request to your Backend to authenticate the user
-in your system before then sending a POST request to the Versori create user endpoint.
+in your system before then sending a PUT request to the Versori create user endpoint.
 
 `https://platform.versori.com/apis/switchboard/organisations/{orgId}/hubs/{hubId}/boards/{boardId}/users/{userId}`
 
@@ -215,7 +215,7 @@ app.post('/backendCreateUserEndpoint', (req, res) => {
     // Optional: Extend body with any extra environments and dynamic variables.
 
     const reponse = fetch(`https://platform.versori.com/apis/switchboard/organisations/{orgId}/hubs/{hubId}/boards/{boardId}/users/{userId}`, {
-        method: 'POST',
+        method: 'PUT',
         headers: {
             Authorization: `Bearer [YOUR_WRITE_API_KEY]`,
         },
@@ -268,7 +268,7 @@ UI.
 
 ## Disconnect User from Integration
 
-To disconnect a user, the onDisconnected callback can be used to send a POST request to your Backend before sending a POST request to the Versori delete user endpoint
+To disconnect a user, the onDisconnected callback can be used to send a POST request to your Backend before sending a DELETE request to the Versori delete user endpoint
 
 `https://platform.versori.com/apis/switchboard/organisations/{orgId}/hubs/{hubId}/boards/{boardId}/users/{userId}`
 
