--- a/v1/concepts.mdx
+++ b/v1/concepts.mdx
@@ -4,6 +4,7 @@ title: Introduction
 
 import ConnectorsOverview from '/snippets/connectors/overview.mdx';
 import BoardsOverview from '/snippets/boards/overview.mdx';
+import Tools from '/snippets/boards/overview.mdx';
 
 # Core Elements
 
