fix: add formatting to note

--- a/v1/tools/code_tool.mdx
+++ b/v1/tools/code_tool.mdx
@@ -78,7 +78,7 @@ analyse the data it has available to it, understand the user's requirements and 
 
 ### Testing the Code
 
-- The board must currently be published to test the code within the Code Tool {/* Add link on how to publish a board */}
+- **Note** - the board must currently be published to test the code within the Code Tool {/* Add link on how to publish a board */}
 
 - Once the board has been published, the Code Tool can be tested. This can be done using any example data the user may have
 or alternatively using AI to produce dummy test data following the schema of the incoming data
