fix: improve grammar

--- a/v1/tools/code_tool.mdx
+++ b/v1/tools/code_tool.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Code Tool'
 description: 'The Code Tool gives the ability to write custom Node.js code against the data in an integration.
-It also offers the ability to write a custom output schema, which can be useful to reshape the data for later on in the integration.'
+It also offers the ability to write a custom output schema, which can be useful to reshape the data for later on in an integration.'
 ---
 
 ### Incoming Data
