fix: add some bold highlighting

--- a/v1/tools/code_tool.mdx
+++ b/v1/tools/code_tool.mdx
@@ -12,12 +12,12 @@ It also offers the ability to write a custom output schema, which can be useful 
 
 ### Use cases
 
-- The Code Tool enables the user to write custom logic on their data in an integration. 
+- The Code Tool enables the user to write **custom logic** on their data in an integration. 
 This provides the user with full control on the operation/operations performed
 
-- Defining a custom output schema. In some integrations, the shape of the data from the incoming connector might not be suitable for the target connector. The Code Tool can be used as an adapter in these types of scenarios
+- Defining a **custom output schema**. In some integrations, the shape of the data from the incoming connector might not be suitable for the target connector. The Code Tool can be used as an adapter in these types of scenarios
 
-- Transforming data - transforming data from one schema to another
+- **Transforming data** - transforming data from one schema to another
 
 ### Writing the code
 
