feat(tools): add initial pass at Tools documentation

--- a/v1/integrate/boards/tools/transformer.mdx
+++ b/v1/integrate/boards/tools/transformer.mdx
@@ -17,18 +17,18 @@ the transformer, click configure:
 {" "}
 
 <Frame caption="Initial transformer config">
-    <img src="../../images/transformer-sidebar.png" />
+    <img src="/images/transformer-sidebar.png" />
 </Frame>
 
 #### Override Input
 
-Additionally - you can configure the input to be from any previous node in your flow. Furthermore, you can select parts of data from a previous node.
-The only restriction is that the data you select must be an `object` type.
+Additionally - you can configure the input to be from any previous node in your flow. Furthermore, you can select parts
+of data from a previous node. The only restriction is that the data you select must be an `object` type.
 
 {" "}
 
 <Frame caption="Override transformer input">
-    <img src="../../images/transfomer-override-input.png" />
+    <img src="/images/transfomer-override-input.png" />
 </Frame>
 
 ### Initial View - Leaf (Source/Target) Nodes
@@ -42,7 +42,7 @@ the next connected node in the flow.
 {" "}
 
 <Frame caption="Initial transformer nodes">
-    <img src="../../images/transformer-initial-view.png" />
+    <img src="/images/transformer-initial-view.png" />
 </Frame>
 
 ### Getting Started
@@ -50,13 +50,14 @@ the next connected node in the flow.
 The Transformer has multiple tools available to help navigate your data tree and to help deal with nested objects and
 arrays iterations.
 
-You can drag an edge (line) between two properties to connect them. This will map these two properties together. You can also add tools by hovering over the circles on the properties and clicking on the plus button that appears, bringing out the tool menu
-and clicking on one of the tool names.
+You can drag an edge (line) between two properties to connect them. This will map these two properties together. You can
+also add tools by hovering over the circles on the properties and clicking on the plus button that appears, bringing out
+the tool menu and clicking on one of the tool names.
 
 {" "}
 
 <Frame caption="Available transformer tools">
-    <img src="../../images/transformer-tools.png" />
+    <img src="/images/transformer-tools.png" />
 </Frame>
 
 ### Expanding objects
@@ -67,7 +68,7 @@ the properties of the object as individual properties in the transformer:
 {" "}
 
 <Frame caption="Expanded objects">
-    <img src="../../images/transformer-objects.png" />
+    <img src="/images/transformer-objects.png" />
 </Frame>
 
 ### Handling arrays/lists
@@ -76,13 +77,13 @@ The Transformer has 3 tools currently for working with arrays/lists: `For Each`,
 
 #### For Each
 
-The `For Each` tool allows you to iterate over an array and perform actions on each item in the array. This tool can only
-be used as a source tool and must be used in conjunction with the [List Generator](#list-generator) tool.
+The `For Each` tool allows you to iterate over an array and perform actions on each item in the array. This tool can
+only be used as a source tool and must be used in conjunction with the [List Generator](#list-generator) tool.
 
 {" "}
 
 <Frame caption="Using the for each tool on lists">
-    <img src="../../images/transformer-foreach.png" />
+    <img src="/images/transformer-foreach.png" />
 </Frame>
 
 #### List Generator
@@ -99,12 +100,14 @@ target tool.
 
 #### List Builder
 
-The `List Builder` tool allows you to manually build a list of items - for example if you want to build a list with only one element, using parent properties of the source. This tool should be used as a target tool. You can click on the plus button at the bottom of the tool to add another element to the list.
+The `List Builder` tool allows you to manually build a list of items - for example if you want to build a list with only
+one element, using parent properties of the source. This tool should be used as a target tool. You can click on the plus
+button at the bottom of the tool to add another element to the list.
 
 {" "}
 
 <Frame caption="Create a known list of items from any source">
-    <img src="../../images/transformer-listbuilder.png" />
+    <img src="/images/transformer-listbuilder.png" />
 </Frame>
 
 ### Other Tools
@@ -115,7 +118,7 @@ from a previous node in your board. This tool should be used as a target tool.
 {" "}
 
 <Frame caption="Select a value from a previous node">
-    <img src="../../images/transformer-selector.png" />
+    <img src="/images/transformer-selector.png" />
 </Frame>
 
 And finally there's the `Constant` tool, which allows you to add a constant value to your transformer. The type is based
@@ -124,7 +127,7 @@ on the type of the property you're connecting to. This tool should also be used 
 {" "}
 
 <Frame caption="Input a hardcoded value">
-    <img src="../../images/transformer-constant.png" />
+    <img src="/images/transformer-constant.png" />
 </Frame>
 
 ### Validation
@@ -133,7 +136,7 @@ The transformer will validate your configuration as you go, and will highlight a
 validates the property data type.
 
 <Frame caption="Validation errors">
-    <img src="../../images/transformer-validation.png" />
+    <img src="/images/transformer-validation.png" />
 </Frame>
 
 ### That's it!
@@ -144,7 +147,7 @@ workflows.
 {" "}
 
 <Frame caption="Final transformer config">
-    <img src="../../images/transformer-fullboard.png" />
+    <img src="/images/transformer-fullboard.png" />
 </Frame>
 
   </Tab>
