fix: update selectors and nav
# Conflicts:
#	mint.json

--- a/v1/integrate/boards/tools/filter.mdx
+++ b/v1/integrate/boards/tools/filter.mdx
@@ -90,8 +90,12 @@ that match certain criteria.
 
 ## Using Selectors in Filter
 
-Using selectors to access data from any previous step in the workflow, any kind of business logic can be applied to the
-data flowing through the Integration.
+Selectors can be used to access data from any previous step in the workflow. Opening up the possibilites for any kind of
+business logic to be applied to the data flowing through the Integration.
+
+<Frame caption="The Filter selects from a previous steps operation">
+    <img src="https://storage.googleapis.com/versori-assets/apps/user-docs/tools/filter/filter-selector.png" />
+</Frame>
 
 ## Creating nested Filter conditions
 
