feat(embedded): added more docs on how Versori Embedded works, and fix some dead links

--- a/v1/integrate/boards/tools.mdx
+++ b/v1/integrate/boards/tools.mdx
@@ -2,3 +2,52 @@
 title: Overview
 description: Tools provide the building blocks to build you integrations.
 ---
+
+# Quick Links
+
+Already familiar with the platform tools and want to jump into a specific tool?
+
+<CardGroup cols={3}>
+    <Card title="Filter" icon="filter" href="./tools/filter">
+        Filter data
+    </Card>
+    <Card title="Trigger" icon="play" href="./tools/trigger">
+        Trigger workflow
+    </Card>
+    <Card title="Transformer" icon="arrow-right-arrow-left" href="./tools/trigger">
+        Powerfully Transform data
+    </Card>
+</CardGroup>
+
+<CardGroup cols={3}>
+    <Card title="Delay" icon="clock" href="./tools/delay">
+        Delay the execution of a workflow
+    </Card>
+    <Card title="Data Builder" icon="play" href="./tools/data-builder">
+        Build form body data for an endpoint request
+    </Card>
+    <Card title="Webhook" icon="webhook" href="./tools/webhook">
+        Trigger an execution by webhook
+    </Card>
+</CardGroup>
+
+<CardGroup cols={3}>
+    <Card title="Code" icon="code" href="./tools/code-tool">
+        Write custom code for mmore complex requirements
+    </Card>
+    <Card title="Variables" icon="variable" href="./tools/global-variables">
+        Use external variable values in workflow
+    </Card>
+    <Card title="Data Mapper" icon="code" href="./tools/data-mapper">
+        Check and Put values in a Database
+    </Card>
+</CardGroup>
+
+<CardGroup cols={3}>
+    <Card title="Splitter" icon="split" href="./tools/splitter">
+        Split a collection of data to be processed separately
+    </Card>
+    <Card title="Responder" icon="play" href="./tools/responder">
+        Send a response to a webhook
+    </Card>
+</CardGroup>
