--- a/v1/integrate/boards/tools/filter.mdx
+++ b/v1/integrate/boards/tools/filter.mdx
@@ -114,7 +114,7 @@ For more complex filter requirements nested conditions can be implemented.
     this will cover all requirements and should further nesting be required the Filter is most likely not the right tool
     for this step of the workflow and some data manipulataion should be carried out.
 
-    For very complex logical filtering, the [code tool](./tools/code-tool) can be used.
+    For very complex logical filtering, the [code tool](./code-tool) can be used.
 
 </Warning>
 
